# HackathonCGI-Tommy

./: README.md  final.html  html.html  index1.html  main.py  moving.html  prototype 1.html  prototype avec desactivation.html  prototype telephone.html  pyproject.toml  react interactif prototype.txt
emotion-app/: app.json  package-lock.json  package.json
emotion-app/app/(tabs)/: _layout.tsx  emotion.tsx
pretrained_models/emotion-sb/: hyperparams.yaml
