[project]
name = "hackathoncgi-tommy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "huggingface-hub>=0.34,<1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "transformers>=4.56",
    "uvicorn>=0.41.0",
]
